@@ -1,3 +1,12 @@
+2000-04-02  Chema Celorio  <chema@celorio.com>
+
+	* menus.c: Added print preview entry.
+
+	* gE_print.c (file_print_preview_cb): Added print preview
+	capabilities
+	(print_document): ditto
+	(preview_destroy_cb): ditto
+
 2000-04-02  Jason Leach  <leach@wam.umd.edu>
 
 	* search.c (create_search_dialog): marked a string for i18n that
